[package]
name = "attenuable-jwt"
description = "Create and verify JWTs that support secure offline attenuation"
license = "MIT OR Apache-2.0"
authors = ["Adam Berger <adam@simplystated.dev>"]
version = "0.1.0"
edition = "2021"
keywords = ["JWT", "jwt", "token", "web"]
repository = "https://github.com/simplystated/rs-attenuable-jwt"
homepage = "https://github.com/simplystated/rs-attenuable-jwt"
readme = "README.md"

[lib]

[features]
integration-test = ["ed25519"]
ed25519 = ["ring", "zeroize"]

[dependencies]
base64 = "0.13.0"
erased-serde = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
thiserror = "1.0.31"
ring = { version = "0.16.20", optional = true }
zeroize = { version = "1.5.6", features = ["zeroize_derive"], optional = true }
serde_json = "1.0.82"

[dev-dependencies]
jsonwebtoken = "8.1.1"
ring = "0.16.20"
mockall = "0.11.1"
proptest = "1.0.0"
