[package]
name = "attenuable-jwt"
description = "Create and verify JWTs that support secure offline attenuation"
license = "MIT OR Apache-2.0"
authors = ["Adam Berger <adam@simplystated.dev>"]
version = "0.3.2"
edition = "2021"
keywords = ["JWT", "jwt", "token", "web"]
repository = "https://github.com/simplystated/rs-attenuable-jwt"
homepage = "https://github.com/simplystated/rs-attenuable-jwt"
readme = "README.md"

[lib]

[features]
default = ["ed25519", "rng"]
ed25519 = ["ed25519-dalek"]
rng = ["rand"]

[dependencies]
base64 = "0.13.0"
erased-serde = "0.3.21"
serde = { version = "1.0.138", features = ["derive"] }
thiserror = "1.0.31"
serde_json = "1.0.82"
ed25519-dalek = { version = "1.0.1", features = ["rand"], optional = true }
rand = { version = "0.7.3", optional = true }
rand_core = "0.5"

[dev-dependencies]
mockall = "0.11.1"
proptest = "1.0.0"
ed25519 = { version = "1.5.2", features = ["pkcs8", "alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["rand"] }
rand = { version = "0.7.3" }
